--- a/res/layout/tiletravelerscreen.xml
+++ b/res/layout/tiletravelerscreen.xml
@@ -46,16 +46,6 @@
         android:text="^" />
 
     <Button
-        android:id="@+id/right"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/status"
-        android:layout_marginRight="51dp"
-        android:text="->" />
-
-    <Button
         android:id="@+id/down"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
@@ -64,5 +54,36 @@
         android:layout_alignBottom="@+id/right"
         android:layout_toLeftOf="@+id/right"
         android:text="v" />
+
+    <Button
+        android:id="@+id/right"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/shapeView"
+        android:layout_marginRight="47dp"
+        android:text="->" />
+
+    <Button
+        android:id="@+id/reset"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/right"
+        android:layout_alignBottom="@+id/right"
+        android:layout_alignRight="@+id/shapeView"
+        android:text="Reset"
+        android:textSize="@dimen/smallbutton" />
+
+    <Button
+        android:id="@+id/centerScreen"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/reset"
+        android:layout_toLeftOf="@+id/left"
+        android:text="Center Screen"
+        android:textSize="@dimen/smallish_button7dp" />
 
 </RelativeLayout>
