Menu + image stubs
Added a menu as well as some method stubs to make image manipulation a
bit nicer for whoever decides to implement that.

--- a/res/menu/tile_traveler_screen.xml
+++ b/res/menu/tile_traveler_screen.xml
@@ -1,9 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+    <item android:id="@+id/reset" android:title="@string/reset"></item><item android:id="@+id/stages" android:title="@string/stage_select">
+        <menu>
+            <item android:id="@+id/stage1" android:title="@string/stage1"/>
+            <item android:id="@+id/stage2" android:title="@string/stage2"/>
+            <item android:id="@+id/stage3" android:title="@string/stage3"/>
+        </menu>
+    </item>
+    
 
 </menu>
