--- a/res/layout/tiletravelerscreen.xml
+++ b/res/layout/tiletravelerscreen.xml
@@ -62,27 +62,15 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/shapeView"
-        android:layout_marginRight="47dp"
         android:text="->" />
-
-    <Button
-        android:id="@+id/reset"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/right"
-        android:layout_alignBottom="@+id/right"
-        android:layout_alignRight="@+id/shapeView"
-        android:text="Reset"
-        android:textSize="@dimen/smallbutton" />
 
     <Button
         android:id="@+id/centerScreen"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/reset"
-        android:layout_toLeftOf="@+id/left"
+        android:layout_alignParentLeft="true"
+        android:layout_alignTop="@+id/left"
         android:text="Center Screen"
         android:textSize="@dimen/smallish_button7dp" />
 
