--- a/res/menu/tile_traveler_screen.xml
+++ b/res/menu/tile_traveler_screen.xml
@@ -5,6 +5,8 @@
             <item android:id="@+id/stage2" android:title="@string/stage2"/>
             <item android:id="@+id/stage3" android:title="@string/stage3"/>
             <item android:id="@+id/stage4" android:title="@string/stage4"/>
+            <item android:id="@+id/stage5" android:title="@string/stage5"/>
+            <item android:id="@+id/stage6" android:title="@string/stage6"/>
         </menu>
     </item>
     
